important changes on html content

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
     <!-- section -->
     <section class="container">
-      <!-- input -->
-      <div class="form-input">
+      <div class="form-container">
+        <!-- input -->
         <form>
-          <input type="text" placeholder="Note" />
+          <input type="text" class="task-input" placeholder="Note" />
           <button class="task-button" type="submit">
             <i class="fas fa-plus-circle"></i>
           </button>
@@ -40,11 +40,12 @@
       </div>
 
       <!-- tasks -->
-      <div class="task-content">
+      <div class="task-container"></div>
+      <!-- <div class="task-content">
         <div>title</div>
         <span><i class="fa-sharp fa-regular fa-square-check"></i></span>
         <span><i class="fa-solid fa-trash-can"></i></span>
-      </div>
+      </div> -->
     </section>
 
     <script src="script.js"></script>
